Charting refactored Started working on an offensive Bot Simpleton Alpha executable commited as a reference to play against

--- a/V7mBot/V7mBot.csproj
+++ b/V7mBot/V7mBot.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI\Bots\MurderBot.cs" />
     <Compile Include="AI\Bots\ThreeStateBot.cs" />
     <Compile Include="AI\Position.cs" />
     <Compile Include="Move.cs" />
