Added HeroInfo as a facade around hero data with a bunch of utility functions to make knowledge less cluttered and the actual bot code more readable

--- a/V7mBot/V7mBot.csproj
+++ b/V7mBot/V7mBot.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AI\Bots\MurderBot.cs" />
-    <Compile Include="AI\Bots\ThreeStateBot.cs" />
+    <Compile Include="AI\HeroInfo.cs" />
     <Compile Include="AI\Position.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="AI\Bot.cs" />
