Refactored conditional/tree to OOP states, StatefulBot serves as baseclass. Should make Bot-Code more readable in the long run!

--- a/V7mBot/V7mBot.csproj
+++ b/V7mBot/V7mBot.csproj
@@ -47,13 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AI\Bots\MurderBot.cs" />
+    <Compile Include="AI\Bots\GruntBot.cs" />
     <Compile Include="AI\HeroInfo.cs" />
     <Compile Include="AI\Position.cs" />
+    <Compile Include="AI\StatefulBot.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="AI\Bot.cs" />
     <Compile Include="AI\Bots\RandomBot.cs" />
-    <Compile Include="AI\Bots\SimpleBot.cs" />
+    <Compile Include="AI\Bots\PeonBot.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="DataContracts.cs" />
     <Compile Include="AI\Knowledge.cs" />
